examples/type_system/failing/38_top_level_effect_rejected.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// A4 matrix: effectful top-level expression is rejected.

print("top-level effect")
